[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/boss_eva_proyectiles.png" type="Texture" id=1]
[ext_resource path="res://objects/EvaProyectile2.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.63361

[sub_resource type="CircleShape2D" id=2]
radius = 7.75364

[sub_resource type="Animation" id=3]
resource_name = "spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("boss_eva_proyectiles:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="EvaProyectile2" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.5
contacts_reported = 1
script = ExtResource( 2 )

[node name="boss_eva_proyectiles" type="Sprite" parent="."]
position = Vector2( 0.137074, -0.636776 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 144, 80, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.437499, -0.750001 )
scale = Vector2( 3.68125, 2.975 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/spin = SubResource( 3 )

[node name="TimerChangeGrav" type="Timer" parent="."]
autostart = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_EvaProyectile1_body_entered"]
[connection signal="timeout" from="TimerChangeGrav" to="." method="_on_TimerChangeGrav_timeout"]
